yet more bug fixes, dynamically changing various element sizing and positioning within the sidebar component to gain collapsable functionality is working but is not DRY and getting wetter as time goes on

--- a/app/assets/stylesheets/components/articles.scss
+++ b/app/assets/stylesheets/components/articles.scss
@@ -8,9 +8,10 @@
 }
 
 .article-index {
-  width: 80%;
+  width: 83%;
   display: flex;
   flex-wrap: wrap;
+  margin-left: 17%;
   border: solid lightgray 1px;
   font-family: sans-serif;
   background-color: lightgray;
