--- a/app/assets/stylesheets/components/sidebar.scss
+++ b/app/assets/stylesheets/components/sidebar.scss
@@ -34,7 +34,7 @@
 // }
 
 .sidebar-with-toggle {
-  // position: relative;
+  position: fixed;
   transform: inherit;
   background-color: #eeeeee;
   width: 17%;
@@ -45,8 +45,8 @@
 .toggle-sidebar {
   position: fixed;
   top: 50%;
-  margin-right: .5em;
-  margin-left: 5em;
+  // margin-right: 6%;
+  left: 12%;
   font-family: sans-serif;
   font-size: 30px;
 }
